
  - Store the paths of source files and dependencies in the .sconsign*
    file(s) relative to the target's directory, not relative to the
    top-level SConstruct directory.  This starts to make it possible to
    subdivide the dependency tree arbitrarily by putting an SConstruct
    file in every directory and using content signatures.

  From Wayne Lee:

  - Avoid "maximum recursion limit" errors when removing $(-$) pairs
    from long command lines.

  From Clive Levinson:

  - Make ParseConfig() recognize and add -mno-cygwin to $LINKFLAGS and
    $CCFLAGS, and -mwindows to $LINKFLAGS.

  From Sanjoy Mahajan:

  - Fix a bad use of Copy() in an example in the man page.

  From Michael McCracken:

  - Add a new "applelink" tool to handle the things like Frameworks and
    bundles that Apple has added to gcc for linking.

  - Use more appropriate default search lists of linkers, compilers and
    and other tools for the 'darwin' platform.

  - Add a LoadableModule Builder that builds a bundle on Mac OS X (Darwin)
    and a shared library on other systems.

  - Improve SWIG tests for use on Mac OS X (Darwin).

  From Georg Mischler:

  - Remove the space after the -o option when invoking the Borland
    BCC compiler; some versions apparently require that the file name
    argument be concatenated with the option.

  From Elliot Murphy:

  - Enhance the tests to guarantee persistence of ListOption
    values in saved options files.

  - Supply the help text when -h is used with the -u, -U or -D options.

  From Christian Neeb:

  - Fix the Java parser's handling of string definitions to avoid ignoring
    subsequent code.

  From Han-Wen Nienhuys:

  - Optimize variable expansion by:  using the re.sub() method (when
    possible); not using "eval" for variables for which we can fetch the
    value directory; avoiding slowing substitution logic when there's no
    '$' in the string.

  From Gary Oberbrunner:
